# ivy-crypto-core

./: .gitignore  Cargo.toml  README.md  build.rs  ivy-security-pubkey.asc  rust-toolchain.toml
.github/workflows/: build-so.yml
src/: lib.rs
src/crypto/: argon2.rs  desktop_pair.rs  encryption.rs  envelope.rs  erasure.rs  hkdf.rs  mod.rs  nonce.rs  pow.rs  pqxdh.rs  safety_number.rs  shamir.rs  zkp.rs
src/identity/: keygen.rs  mod.rs  seed.rs
src/network/: hs_host.rs  mod.rs  tor_client.rs
uniffi/: ivy_crypto_core.udl
