[package]
name = "ivy-crypto-core"
version = "1.0.0"
edition = "2021"
authors = ["Ivy Protocol <security@ivy.security>"]
description = "Memory-safe Rust cryptographic core for the Ivy sovereign communications platform. ML-KEM-768 + X25519 PQXDH, Double Ratchet (XChaCha20-Poly1305), Ed25519, Blind-RSA Privacy Pass, Groth16 ZK, and Arti (Tor V3) orchestration."
repository = "https://github.com/ebh2024ebh/ivy-crypto-core"
homepage = "https://ivy.security"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["cryptography", "post-quantum", "ml-kem", "tor", "privacy"]
categories = ["cryptography", "network-programming"]

[lib]
# cdylib = .so for Android JNI / iOS, staticlib = .a for static linking
# lib = rlib for Rust-to-Rust linking (needed by examples and tests)
crate-type = ["cdylib", "staticlib", "lib"]
name = "ivy_crypto_core"

[dependencies]
# UniFFI for Kotlin/Swift bindings
uniffi = { version = "0.28", features = ["cli"] }

# Classical cryptography
ed25519-dalek = { version = "2.1", features = ["hazmat", "rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
curve25519-dalek = { version = "4.1" }

# Post-quantum cryptography — FIPS 203 ML-KEM-768 exclusively
# pqcrypto-kyber PURGED: all encap/decap migrated to ml-kem
ml-kem = { version = "0.2", features = ["deterministic"] }

# Symmetric encryption
chacha20poly1305 = { version = "0.10", features = ["std"] }
chacha20 = "0.9"

# Key derivation and hashing
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"
hmac = "0.12"

# BIP39 seed phrase
bip39 = { version = "2.0", features = ["std"] }

# Secure memory
zeroize = { version = "1.8", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
getrandom = { version = "0.2", features = ["std"] }

# Tor / Arti client
# default-features = false disables OpenSSL (requires C cross-compilation).
# "rustls" = pure-Rust TLS, no C deps.
# "static-sqlite" = bundles SQLite statically (Android NDK doesn't have -lsqlite3).
arti-client = { version = "0.24", default-features = false, features = ["tokio", "rustls", "static-sqlite", "onion-service-client"] }
tor-rtcompat = { version = "0.24", default-features = false, features = ["tokio", "rustls"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# GF(256) arithmetic for Shamir
gf256 = "0.3"

# Erasure coding for Desktop Swarm
reed-solomon-erasure = "6.0"

# Zero-Knowledge Proofs (Groth16 on BN254 curve)
ark-groth16 = "0.4"
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-relations = "0.4"
ark-snark = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-std = "0.4"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release]
opt-level = "z"        # Optimize for binary size
lto = true             # Link-time optimization (cross-crate inlining)
strip = "symbols"      # Strip ALL symbols (debug + symbol table)
codegen-units = 1      # Single codegen unit (deterministic output)
panic = "abort"        # Abort on panic (no unwind tables = no stack layout leak)
debug = false          # No DWARF debug info
debug-assertions = false
overflow-checks = true # Keep overflow checks (security > perf)
# Note: strip="symbols" removes function names, panic strings, and
# DWARF info from the .so binary, preventing reverse engineers from
# mapping the memory layout of the cryptographic engine.
